// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs has a long path 1`] = `
<div
  className="breadcrumbs breadcrumbs--is-truncated"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-jobs icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb breadcrumb--force-ellipsis"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="breadcrumb"
    >
      <div
        className="breadcrumb__content breadcrumb__content--text"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          foo
        </a>
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        bar
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
    <span>
      States
    </span>
  </div>
</div>
`;

exports[`Breadcrumbs has no path 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-jobs icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
    <span>
      States
    </span>
  </div>
</div>
`;

exports[`Breadcrumbs has no props at all 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-jobs icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has path but no name 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-jobs icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        foo
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        bar
      </a>
    </div>
  </div>
</div>
`;
